dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -186,3 +186,13 @@ select {
 .dark input:is(.dark\:placeholder-green-400)::placeholder {
   color: #4ade80 !important;
 }
+
+:root {
+  color-scheme: light;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: light;
+  }
+}
